get Posts by userId functionality udpated
